--- a/etc/nginx/sites-available/isuports.conf
+++ b/etc/nginx/sites-available/isuports.conf
@@ -14,6 +14,12 @@ server {
     try_files $uri /index.html;
   }
 
+  location ~ ^/api/player {
+    proxy_set_header Host $host;
+    proxy_read_timeout 600;
+    proxy_pass http://isuports-3.t.isucon.dev:3000;
+  }
+
   location ~ ^/(api|initialize) {
     proxy_set_header Host $host;
     proxy_read_timeout 600;
