--- a/etc/nginx/sites-available/isuports.conf
+++ b/etc/nginx/sites-available/isuports.conf
@@ -1,5 +1,39 @@
 server {
   listen 443 ssl http2;
+  server_name isucon.t.isucon.dev;
+
+  root /home/isucon/public/;
+
+  ssl_certificate     /etc/nginx/tls/fullchain.pem;
+  ssl_certificate_key /etc/nginx/tls/key.pem;
+  ssl_dhparam         /etc/nginx/tls/dhparam.pem;
+  ssl_protocols       TLSv1.2 TLSv1.3;
+  ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+
+  location / {
+    try_files $uri /index.html;
+  }
+
+  # location ~ ^/api/player {
+  #   proxy_set_header Host $host;
+  #   proxy_read_timeout 600;
+  #   proxy_pass http://isuports-3.t.isucon.dev:3000;
+  # }
+
+  location ~ ^/(api|initialize) {
+    proxy_set_header Host $host;
+    proxy_read_timeout 600;
+    proxy_pass http://isuports-3.t.isucon.dev:3000;
+  }
+
+  location /auth/ {
+    proxy_set_header Host $host;
+    proxy_pass http://isuports-3.t.isucon.dev:3001;
+  }
+}
+
+server {
+  listen 443 ssl http2;
   server_name *.t.isucon.dev;
 
   root /home/isucon/public/;
@@ -14,11 +48,11 @@ server {
     try_files $uri /index.html;
   }
 
-  location ~ ^/api/player {
-    proxy_set_header Host $host;
-    proxy_read_timeout 600;
-    proxy_pass http://isuports-3.t.isucon.dev:3000;
-  }
+  # location ~ ^/api/player {
+  #   proxy_set_header Host $host;
+  #   proxy_read_timeout 600;
+  #   proxy_pass http://isuports-3.t.isucon.dev:3000;
+  # }
 
   location ~ ^/(api|initialize) {
     proxy_set_header Host $host;
