--- a/etc/nginx/sites-available/isuports.conf
+++ b/etc/nginx/sites-available/isuports.conf
@@ -1,6 +1,6 @@
 server {
   listen 443 ssl http2;
-  server_name isucon.t.isucon.dev;
+  server_name ^(a.*).t.isucon.dev;
 
   root /home/isucon/public/;
 
@@ -13,12 +13,6 @@ server {
   location / {
     try_files $uri /index.html;
   }
-
-  # location ~ ^/api/player {
-  #   proxy_set_header Host $host;
-  #   proxy_read_timeout 600;
-  #   proxy_pass http://isuports-3.t.isucon.dev:3000;
-  # }
 
   location ~ ^/(api|initialize) {
     proxy_set_header Host $host;
@@ -47,12 +41,6 @@ server {
   location / {
     try_files $uri /index.html;
   }
-
-  # location ~ ^/api/player {
-  #   proxy_set_header Host $host;
-  #   proxy_read_timeout 600;
-  #   proxy_pass http://isuports-3.t.isucon.dev:3000;
-  # }
 
   location ~ ^/(api|initialize) {
     proxy_set_header Host $host;
