--- a/etc/nginx/sites-available/isuports.conf
+++ b/etc/nginx/sites-available/isuports.conf
@@ -1,6 +1,6 @@
 server {
   listen 443 ssl http2;
-  server_name ~^(a.+).t.isucon.dev$;
+  server_name ~^(i.+)\.t\.isucon\.dev$;
 
   root /home/isucon/public/;
 
