--- a/etc/nginx/sites-available/isuports.conf
+++ b/etc/nginx/sites-available/isuports.conf
@@ -1,6 +1,6 @@
 server {
   listen 443 ssl http2;
-  server_name isucon.t.isucon.dev kayac.t.isucon.dev;
+  server_name isucon.t.isucon.dev kayac.t.isucon.dev o-yluz-3.t.isucon.dev p-khgup-4.t.isucon.dev lwlsf-jj-5.t.isucon.dev v-qdmoqq-6.t.isucon.dev aqu-az-7.t.isucon.dev jbj-wq-8.t.isucon.dev vju-ehxxwn-9.t.isucon.dev jjsjx-tdwrrx-10.t.isucon.dev;
 
   root /home/isucon/public/;
 
