--- a/etc/nginx/sites-available/isuports.conf
+++ b/etc/nginx/sites-available/isuports.conf
@@ -1,6 +1,6 @@
 server {
   listen 443 ssl http2;
-  server_name isucon.t.isucon.dev kayac.t.isucon.dev o-yluz-3.t.isucon.dev p-khgup-4.t.isucon.dev lwlsf-jj-5.t.isucon.dev v-qdmoqq-6.t.isucon.dev aqu-az-7.t.isucon.dev jbj-wq-8.t.isucon.dev vju-ehxxwn-9.t.isucon.dev jjsjx-tdwrrx-10.t.isucon.dev;
+  server_name isucon.t.isucon.dev kayac.t.isucon.dev o-yluz-3.t.isucon.dev p-khgup-4.t.isucon.dev lwlsf-jj-5.t.isucon.dev v-qdmoqq-6.t.isucon.dev aqu-az-7.t.isucon.dev jbj-wq-8.t.isucon.dev vju-ehxxwn-9.t.isucon.dev jjsjx-tdwrrx-10.t.isucon.dev n-rvnokg-11.t.isucon.dev c-nfn-12.t.isucon.dev u-ihm-13.t.isucon.dev v-uiwbb-14.t.isucon.dev crbnn-zttul-15.t.isucon.dev wvf-yom-16.t.isucon.dev xn-up-17.t.isucon.dev nmi-iwvqym-18.t.isucon.dev oni-zqgsm-19.t.isucon.dev jar-dk-20.t.isucon.dev mmcf-zk-21.t.isucon.dev qu-aafhdu-22.t.isucon.dev fyvvb-klm-23.t.isucon.dev a-u-24.t.isucon.dev hgp-yqb-25.t.isucon.dev mr-d-26.t.isucon.dev x-cktf-27.t.isucon.dev j-jpeqh-28.t.isucon.dev dmbhy-b-29.t.isucon.dev ckldz-v-30.t.isucon.dev coje-vthl-31.t.isucon.dev hcrgi-m-32.t.isucon.dev ktai-jcsvq-33.t.isucon.dev w-a-34.t.isucon.dev ult-zgayzx-35.t.isucon.dev ctz-rybx-36.t.isucon.dev nldu-r-37.t.isucon.dev wc-hif-38.t.isucon.dev sh-ijdb-39.t.isucon.dev icb-rpgmq-40.t.isucon.dev l-eeye-41.t.isucon.dev s-oir-42.t.isucon.dev jn-upvnsu-43.t.isucon.dev jsh-ulu-44.t.isucon.dev hvq-i-45.t.isucon.dev l-qmuow-46.t.isucon.dev njlpk-mws-47.t.isucon.dev uhu-t-48.t.isucon.dev s-hmkc-49.t.isucon.dev hsdl-f-50.t.isucon.dev;
 
   root /home/isucon/public/;
 
