--- a/etc/mysql/mysql.conf.d/mysqld.cnf
+++ b/etc/mysql/mysql.conf.d/mysqld.cnf
@@ -74,6 +74,7 @@ long_query_time = 0
 # server-id		= 1
 # log_bin			= /var/log/mysql/mysql-bin.log
 # binlog_expire_logs_seconds	= 2592000
-max_binlog_size   = 100M
+skip-log-bin
+# max_binlog_size   = 100M
 # binlog_do_db		= include_database_name
 # binlog_ignore_db	= include_database_name
