--- a/etc/mysql/mysql.conf.d/mysqld.cnf
+++ b/etc/mysql/mysql.conf.d/mysqld.cnf
@@ -78,3 +78,6 @@ skip-log-bin
 # max_binlog_size   = 100M
 # binlog_do_db		= include_database_name
 # binlog_ignore_db	= include_database_name
+innodb_doublewrite = 0
+innodb_flush_log_at_trx_commit = 2
+innodb_flush_method = O_DIRECT_NO_FSYNC
